--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "grunt-shell": "~0.6.1",
         "grunt-contrib-cssmin": "~0.6.1",
         "grunt-contrib-htmlmin": "~0.1.3",
+        "grunt-manifest": "~0.4.0",
         "grunt-contrib-coffee": "~0.7.0"
     },
     "scripts": {
