--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,11 @@
     "**/*"
   ],
   "dependencies": {
-    "jquery": "2.0.3",
+    "jquery": "1.10.2",
     "bootstrap": "2.3.2",
     "angular-mocks": "~1.2.4",
     "font-awesome": "~4.0.3",
-    "highcharts": "~3.0.7"
+    "highcharts": "~3.0.7",
+    "json2": "*"
   }
 }
