--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-mocks": "~1.2.4",
     "font-awesome": "~4.0.3",
     "highcharts": "~3.0.7",
-    "json2": "*"
+    "json2": "*",
+    "html5shiv": "~3.7.0"
   }
 }
