--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "jquery": "1.10.2",
     "bootstrap": "2.3.2",
-    "angular-mocks": "~1.2.4",
+    "angular": "1.2.6",
+    "angular-mocks": "1.2.6",
     "font-awesome": "~4.0.3",
     "highcharts": "~3.0.7",
     "json2": "*",
